<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_project"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context="com.example.katesudal.participantgroupmanagement.Activity.CreateProjectActivity">
        <LinearLayout
            android:id="@+id/layoutProjectHeader"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:layout_alignParentTop="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@color/colorDarkBrown"
                    android:textSize="16sp"
                    android:text="Project Name :"/>
                <EditText
                    android:id="@+id/editTextProjectName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:padding="3dp"
                    android:background="@color/colorLightCream"
                    android:textCursorDrawable="@drawable/cursor_cream"
                    android:textColorHighlight="@color/colorDarkCream"
                    android:textColor="@color/colorDarkBrown"
                    android:textSize="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@color/colorDarkBrown"
                    android:textSize="16sp"
                    android:text="Section Name :"/>
                <EditText
                    android:id="@+id/editTextSectionName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/colorLightCream"
                    android:padding="3dp"
                    android:textCursorDrawable="@drawable/cursor_cream"
                    android:textColorHighlight="@color/colorDarkCream"
                    android:textColor="@color/colorDarkBrown"
                    android:textSize="16sp"/>
                <Button
                    android:id="@+id/buttonAddSectionName"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:padding="1dp"
                    android:background="@drawable/button_add_participant"
                    android:textColor="@color/background"
                    android:text="+Add" />
            </LinearLayout>
        </LinearLayout>
        <ListView
            android:id="@+id/listViewSectionName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="120dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="45dp"
            android:divider="@android:color/transparent">
        </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/colorLightBrown"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/buttonNextToCreateProject"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_create">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorDarkBrown"
                    android:text="Next"/>
            </LinearLayout>
            <View
                android:layout_width="0.1dp"
                android:layout_height="match_parent"
                android:background="@color/colorLightBrown"/>
            <LinearLayout
                android:id="@+id/buttonCancelCreateSectionName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_create">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/colorNormalBrown"
                    android:text="Cancel"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
