<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:padding="10dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/background_participant_item">
    <TextView
        android:id="@+id/textViewCreatedSessionName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:layout_marginStart="10dp"
        android:textColor="@color/colorDarkBrown"
        android:textSize="20sp"/>
    <ImageView
        android:id="@+id/iconDeleteSectionName"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_delete"
        android:alpha="0.3"/>
</LinearLayout>