...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@color/background">
        <LinearLayout
            android:id="@+id/buttonCreateProject"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_create">
            <TextView
                android:layout_width="match_parent"
...
        </LinearLayout>
        <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:background="@color/colorLightBrown"/>
        <LinearLayout
            android:id="@+id/buttonCancelCreateProject"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_create">
            <TextView
                android:layout_width="match_parent"
...
